[package]
name = "yz-server-executor"
version = "0.2.0"
description = "simple multithreaded executor"
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
async-executor = "1.4"
event-listener = "2.5"
futures-lite = "1.12"

[dependencies.num_cpus]
version = "1.13"
optional = true
