[package]
name = "yz-server-executor"
version = "0.3.1"
description = "simple multithreaded async executor (wraps async-executor)"
documentation = "https://docs.rs/yz-server-executor"
repository = "https://github.com/YZITE/server-executor"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
async-executor = "1.8"
event-listener = "5.3"
futures-lite = "2.1"

[dependencies.num_cpus]
version = "1.16"
optional = true
